--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^5.12.8",
     "expo": "~40.0.0",
     "expo-camera": "~9.1.0",
+    "expo-linking": "~2.0.1",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
