--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-camera": "~9.1.0",
     "expo-linking": "~2.0.1",
     "expo-status-bar": "~1.0.3",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
@@ -24,6 +25,7 @@
     "react-native-maps": "0.27.1",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "~1.13.0",
+    "react-native-render-html": "^5.1.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "^2.16.1",
     "react-native-skeleton-placeholder": "^3.0.4",
