--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-maps": "0.27.1",
+    "react-native-pager-view": "^5.1.2",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "~1.13.0",
     "react-native-render-html": "^5.1.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "^2.16.1",
     "react-native-skeleton-placeholder": "^3.0.4",
+    "react-native-tab-view": "^3.0.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-native-webview": "11.0.0",
