--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
@@ -15,12 +16,18 @@
     "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-camera": "~9.1.0",
+    "expo-image-manipulator": "~8.4.0",
+    "expo-linear-gradient": "~8.4.0",
     "expo-linking": "~2.0.1",
+    "expo-location": "~10.0.0",
     "expo-status-bar": "~1.0.3",
+    "indicative": "^7.4.4",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-animatable": "^1.3.3",
+    "react-native-elements": "^3.3.2",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-maps": "0.27.1",
     "react-native-pager-view": "^5.1.2",
