--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-picker/picker": "^1.12.0",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.1",
     "expo": "~40.0.0",
+    "expo-app-auth": "~9.3.0",
     "expo-camera": "~9.1.0",
+    "expo-google-sign-in": "~8.4.0",
     "expo-image-manipulator": "~8.4.0",
+    "expo-image-picker": "~9.2.0",
     "expo-linear-gradient": "~8.4.0",
     "expo-linking": "~2.0.1",
     "expo-location": "~10.0.0",
@@ -29,6 +33,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^3.3.2",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-google-signin": "^2.1.1",
     "react-native-maps": "0.27.1",
     "react-native-pager-view": "^5.1.2",
     "react-native-paper": "^4.7.2",
